codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__clearing_thread_footer_override_preserves_general_footer_hint.snap
---
source: tui/src/chatwidget/tests.rs
expression: rendered
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"   Save and close external editor to continue.                                  "
